@@ -25,13 +25,10 @@ def main():
 
 def handle_connection(conn):
     request = conn.recv(1000)
-    # ^^ @comment - might fix the index out of bounds error by checking 
-    #               to see if this variable is valid
-    # ex: if request:
-    #         do stuff..
-    method = request.split('\n')[0].split(' ')[0]
-    path = request.split('\n')[0].split(' ')[1]
-    #               ^^ @comment - just a note: could use splitlines() too
+    If not request: # Avoids indexing error.
+        return
+    method = request.splitlines()[0].split(' ')[0]
+    path = request.splitlines()[0].split(' ')[1]
 
     # Send intial line and headers.
     conn.send('HTTP/1.0 200 OK\r\nContent-type: text/html\r\n\r\n')
